Fri Nov  6 08:49:07 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/config.c:
	- Fix compatibility problem with "server:port" syntax

Fri Oct 23 15:12:16 EDT 2009	JK Lowden <jklowden@freetds.org>
	* src/apps/tsql.c exit after -L output
	* src/dblib/dblib.c
	* src/dblib/dbopen.c
	- dbdatecrack follows MSDBLIB, not WIN32
	* src/tds/config.c 
	- do not parse freetds.conf [servername] for instance/port. 

Fri Oct 16 09:58:46 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/dblib.c: Fix dbwritetext with text == NULL

Mon Oct 12 09:26:46 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/prepare_win32.sh:
	- add comments to misc/prepare_win32.sh script

Sat Oct  3 11:19:20 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: unprepare optimization for emulated dynamics

Fri Oct  2 11:23:18 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/ct.c src/tds/query.c src/tds/tds_checks.c:
	- Support RPCs using tds 4.2

Thu Oct  1 11:47:53 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/convert_tds2sql.c src/tds/iconv.c:
	- Avoid core using SQLWCHAR and TDS 4.2

Wed Sep 30 13:51:16 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/log.c: Avoid memory problems logging data

Tue Sep 29 11:15:56 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/convert.c: fix float to money precision during conversion

Mon Sep 28 16:06:37 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/login.c: Fix SSL connection under mssql2k

Mon Sep 14 12:02:10 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac src/dblib/unittests/common.c:
	- limit stack use in dblib tests

Fri Sep  4 09:11:38 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac vms/README.vms: Fix --with-tdsver option

Thu Sep  3 13:53:26 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* TODO src/tds/token.c:
	- fix NULL becaming empty strings under Sybase
