@@ -1,3 +1,6 @@
+Thu Nov 19 09:32:38 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/tds/config.c: fix typo in config.c
+
 Fri Nov  6 08:49:07 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/tds/config.c:
 	- Fix compatibility problem with "server:port" syntax
@@ -1886,4 +1889,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.82 added because of release
 	
 $FreeTDS$
-$Id: ChangeLog,v 1.2881 2009-11-06 07:50:44 freddy77 Exp $
+$Id: ChangeLog,v 1.2882 2009-11-19 08:33:36 freddy77 Exp $
